After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 151628 - 'graph guru' preview is wrong size after changing the dialog size
'graph guru' preview is wrong size after changing the dialog size
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Charting
git master
Other All
: Normal normal
: ---
Assigned To: Emmanuel Pacaud
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-09-01 17:03 UTC by Adrian Custer
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Adrian Custer 2004-09-01 17:03:52 UTC
The size of the preview ends up being smaller than the available pane if the
graph guru dialog window is resized.

1) new gnumeric
2) click on the chart icon
=> the graph guru opens.
3) click on the 'show sample' button
=> an empty graph is shown in the whole area available
4) resize the graph guru window
5) click on the 'show sample' button
=> the empth graph is shown only in the top corner of the area avaialble
Comment 1 Jody Goldberg 2004-09-05 14:21:24 UTC
Fixed.
The problems was actually more subtle.  We were losing the zoom in the resize
handler.  Everything was 50% too small as a result.