http://bugzilla.gnome.org/show_bug.cgi?id=151628 hard code the zoom when

2004-09-05  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=151628
	* graph/gog-guru.c (cb_typesel_sample_plot_resize) : hard code the
	  zoom when recalculating the size.  The sample graph is only zoomed
	  when visible.